Se configura environment para producción

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.2.0",
     "@savvywombat/tailwindcss-grid-areas": "^2.0.1",
     "cors": "^2.8.5",
+    "netlify-cli": "^9.6.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
